--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4204642
+	base = 32e5d90
 	trimbase = 
 	parent = release/fuerte/ecto
-	previous = 
+	previous = 4204642
