--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fd96764
+	base = 7115c3d
 	trimbase = 
 	parent = debian/fuerte/ecto
-	previous = 
+	previous = fd96764
