--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 522462c
+	base = 260274c
 	trimbase = 
 	parent = release/groovy/ecto
-	previous = 
+	previous = 522462c
