--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ea4daaa
+	base = ecc124d
 	trimbase = 
 	parent = debian/groovy/ecto
-	previous = 
+	previous = ea4daaa
