--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 180e2d6
+	base = e0fe811
 	trimbase = 
 	parent = release/indigo/ecto
-	previous = 
+	previous = 180e2d6
