--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f4bcb2f
+	base = 64a6500
 	trimbase = 
 	parent = debian/indigo/ecto
-	previous = 
+	previous = f4bcb2f
