--- a/package.xml
+++ b/package.xml
@@ -1,11 +1,10 @@
 <package>
   <name>ecto</name>
-  <version>0.6.0</version>
+  <version>0.6.1</version>
   <description>Ecto is a hybrid C++/Python development framework for constructing and maintaining pipelines.</description>
   <author email="erublee@willowgarage.com">Ethan Rublee</author>
   <author email="straszheim@willowgarage.com">Troy Straszheim</author>
-  <maintainer email="vrabaud@willowgarage.com">Vincent Rabaud</maintainer>
-  <maintainer email="erublee@willowgarage.com">Ethan Rublee</maintainer>
+  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
   <license>BSD</license>
 
   <url>http://ecto.willowgarage.com</url>
