--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -60,8 +60,10 @@ add_library(ecto SHARED
   )
 
 target_link_libraries(ecto
-  ${ECTO_DEP_LIBS}
-  )
+  ${Boost_LIBRARIES}
+  ${catkin_LIBRARIES}
+  ${PYTHON_LIBRARIES}
+)
 
 set_source_files_properties(log.cpp
   PROPERTIES
@@ -71,13 +73,13 @@ set_source_files_properties(log.cpp
 if(UNIX)
   set_target_properties(ecto PROPERTIES
     COMPILE_FLAGS "${FASTIDIOUS_FLAGS}"
-    VERSION ${ECTO_VERSION}
+    VERSION ${ecto_VERSION}
     SOVERSION ${ECTO_SOVERSION}
     )
 elseif(WIN32)
   set_target_properties(ecto PROPERTIES
     COMPILE_FLAGS "${FASTIDIOUS_FLAGS}"
-    VERSION ${ECTO_VERSION}
+    VERSION ${ecto_VERSION}
     SOVERSION ${ECTO_SOVERSION}
     OUTPUT_NAME ecto_cpp
     )
