Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.6.1": ["Vincent Rabaud", "vincent.rabaud@gmail.com"], "0.6.0": ["Vincent Rabaud", "vrabaud@willowgarage.com"]}
+{"0.6.2": ["Vincent Rabaud", "vincent.rabaud@gmail.com"], "0.6.1": ["Vincent Rabaud", "vincent.rabaud@gmail.com"], "0.6.0": ["Vincent Rabaud", "vrabaud@willowgarage.com"]}
