--- a/tracks.yaml
+++ b/tracks.yaml
@@ -36,7 +36,7 @@ tracks:
     release_tag: :{version}
     ros_distro: groovy
     vcs_type: git
-    vcs_uri: https://github.com/plasmodic/ecto.git
+    vcs_uri: /home/vrabaud/workspace/recognition_kitchen/src/ecto
     version: :{auto}
   hydro:
     actions:
