--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <package>
   <name>ecto</name>
-  <version>0.6.2</version>
+  <version>0.6.3</version>
   <description>Ecto is a hybrid C++/Python development framework for constructing and maintaining pipelines.</description>
   <author email="erublee@willowgarage.com">Ethan Rublee</author>
   <author email="straszheim@willowgarage.com">Troy Straszheim</author>
@@ -9,8 +9,10 @@
 
   <url>http://ecto.willowgarage.com</url>
   <build_depend>boost</build_depend>
+  <build_depend>python</build_depend>
 
   <run_depend>boost</run_depend>
+  <run_depend>python</run_depend>
 
   <buildtool_depend>catkin</buildtool_depend>
 </package>
