--- a/package.xml
+++ b/package.xml
@@ -1,10 +1,11 @@
 <package>
   <name>ecto</name>
-  <version>0.6.6</version>
+  <version>0.6.7</version>
   <description>Ecto is a hybrid C++/Python development framework for constructing and maintaining pipelines.</description>
   <author email="erublee@willowgarage.com">Ethan Rublee</author>
   <author email="straszheim@willowgarage.com">Troy Straszheim</author>
   <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
+  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
   <license>BSD</license>
 
   <url>http://ecto.willowgarage.com</url>
