--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6678d9c
+	base = f0d0e83
 	trimbase = 
 	parent = release/indigo/ecto
-	previous = 
+	previous = 6678d9c
