Re-add thread library to linker list
Regression caused by 8e354b5aa8281ea8117fc93adb290998b7810be7

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -63,6 +63,7 @@ target_link_libraries(ecto
   ${Boost_LIBRARIES}
   ${catkin_LIBRARIES}
   ${PYTHON_LIBRARIES}
+  ${CMAKE_THREAD_LIBS_INIT}
 )
 
 set_source_files_properties(log.cpp
